UI: fix width of custom period on ios res
- fix width for daterange popover, especially not working on ios-devices

Co-committed-by: Lukas Rieger <73471197+lukasrgr@users.noreply.github.com>

--- a/ui/src/global.scss
+++ b/ui/src/global.scss
@@ -257,9 +257,7 @@ html.md {
     --ion-default-font: $font-family;
 }
 
-//252px for the exact width of my-date-range-picker in PickDateComponent
 .pickdate-popover .popover-content {
-    width: 251px;
     position: center;
     overflow-y: hidden;
     overflow-x: hidden;
